--- a/Blog/post/templates/detalle.html
+++ b/Blog/post/templates/detalle.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ post.title }}{% endblock %}
+{% block title %}{{ post.titulo }}{% endblock %}
 
 {% block content %}
-    <h1>{{ post.title }}</h1>
-    <p>Publicado el {{ post.published_at|date:"d M Y" }} por {{ post.author }}</p>
-    <p>{{ post.content }}</p>
+    <h1>{{ post.titulo }}</h1>
+    <p>Publicado el {{ post.fecha|date:"d M Y H:i" }} por {{ post.autor }}</p>
+    <p>{{ post.contenido }}</p>
 
-    {% if user == post.author %}
-        <a href="{% url 'editar publicacion' post.pk %}">Editar</a>
-        <a href="{% url 'eliminar publicacion' post.pk %}">Eliminar</a>
+    {% if user == post.autor %}
+        <a href="{% url 'editar_publicacion' post.pk %}">Editar</a>
+        <a href="{% url 'eliminar_publicacion' post.pk %}">Eliminar</a>
     {% endif %}
 {% endblock %}
