--- a/Blog/post/templates/registro.html
+++ b/Blog/post/templates/registro.html
@@ -3,11 +3,11 @@
 {% block title %}Registrarse{% endblock %}
 
 {% block content %}
-    <h1>Registrarse</h1>
-
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrarse</button>
-    </form>
+<h1>Registrarse</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}  
+    <button type="submit">Registrarse</button>
+</form>
+<p>¿Ya tienes cuenta? <a href="{% url 'login' %}">Inicia sesión aquí</a></p>
 {% endblock %}
